--- a/Artigos/index.html
+++ b/Artigos/index.html
@@ -99,56 +99,62 @@
       </section>
     </main>
     <footer>
-      <div>
-        <div class="logo">
-          <a href="index.html">
-            <img
-              src="../Imagens/logos/logoFitlySemTexto.png"
-              alt="Fitly_background"
-            />
-            <h2>Fitly</h2>
-          </a>
-          <p>
-            Sua jornada para uma vida mais tranquila <br />
-            começa aqui.<br />
-            Encontre treinos, dicas e muito mais!
-          </p>
-          <ul>
-            <li>
-              <a href=""> <span class="fa-brands fa-instagram"></span></a>
-            </li>
-            <li>
-              <a href=""><span class="fa-brands fa-tiktok"></span></a>
-            </li>
-          </ul>
+        <div>
+            <div class="logo">
+                <a href="/FitlyApp/">
+                    <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
+                    <h2>
+                        Fitly
+                    </h2>
+                </a>
+                <p>
+                    Sua jornada para uma vida mais tranquila <br> começa aqui.<br> Encontre treinos, dicas e muito mais!
+                </p>
+                <ul>
+                    <li>
+                        <a href=""><span class="fa-brands fa-instagram"><span><a>
+                    </li>
+                    <li>
+                        <a href=""><span class="fa-brands fa-tiktok"></span></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="mapSite">
+                <h2>
+                    Indice
+                </h2>
+                <ul>
+                    <li>
+                        <a href="/FitlyApp/">Início</a>
+                    </li>
+                    <li>
+                        <a href="/FitlyApp/Sobre-o-projeto/">
+                            Nosso projeto
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/FitlyApp/Artigos/">Artigos</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="contact">
+                <h2> Contato</h2>
+                <p>
+                    Tem alguma dúvida? Nos contate!
+                </p>
+                <p class="email">
+                    Fitlyapp1@gmail.com
+                </p>
+                <p>
+                    Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto Federal Catarinense
+                </p>
+            </div>
         </div>
-        <div class="mapSite">
-          <h2>Indice</h2>
-          <ul>
-            <li>
-              <a href="index.html">Início</a>
-            </li>
-            <li>
-              <a href="Sobre o projeto/sobreProjeto.html"> Nosso projeto </a>
-            </li>
-            <li>
-              <a href="Artigos/artigos.html">Artigos</a>
-            </li>
-          </ul>
+        <div class="direitos">
+        <p>
+            &copy; 2025 Fitly. Todos os direitos reservados.
+        </p>
         </div>
-        <div class="contact">
-          <h2>Contato</h2>
-          <p>Tem alguma dúvida? Nos contate!</p>
-          <p class="email">Fitlyapp1@gmail.com</p>
-          <p>
-            Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto
-            Federal Catarinense
-          </p>
-        </div>
-      </div>
-      <div class="direitos">
-        <p>&copy; 2025 Fitly. Todos os direitos reservados.</p>
-      </div>
     </footer>
   </body>
 </html>
