--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <footer>
         <div>
             <div class="logo">
-                <a href="index.html">
+                <a href="/FitlyApp/">
                     <img src="Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
                     <h2>
                         Fitly
@@ -115,15 +115,15 @@
                 </h2>
                 <ul>
                     <li>
-                        <a href="index.html">Início</a>
+                        <a href="/FitlyApp/">Início</a>
                     </li>
                     <li>
-                        <a href="Sobre o projeto/sobreProjeto.html">
+                        <a href="/FitlyApp/Sobre-o-projeto/">
                             Nosso projeto
                         </a>
                     </li>
                     <li>
-                        <a href="Artigos/artigos.html">Artigos</a>
+                        <a href="/FitlyApp/Artigos/">Artigos</a>
                     </li>
                 </ul>
             </div>
