--- a/Artigos/OrganizaçãoAlimentar.html
+++ b/Artigos/OrganizaçãoAlimentar.html
@@ -150,11 +150,11 @@
             </li>
         </ul>
     </section>
-      <footer>
+    <footer>
         <div>
             <div class="logo">
-                <a href="../index.html">
-                    <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
+                <a href="/FitlyApp/">
+                    <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
                     <h2>
                         Fitly
                     </h2>
@@ -164,8 +164,7 @@
                 </p>
                 <ul>
                     <li>
-                        <a href="">
-                            <span class="fa-brands fa-instagram"></span></a>
+                        <a href=""><span class="fa-brands fa-instagram"><span><a>
                     </li>
                     <li>
                         <a href=""><span class="fa-brands fa-tiktok"></span></a>
@@ -178,15 +177,15 @@
                 </h2>
                 <ul>
                     <li>
-                        <a href="../index.html">Início</a>
+                        <a href="/FitlyApp/">Início</a>
                     </li>
                     <li>
-                        <a href="../Sobre o projeto/sobreProjeto.html">
+                        <a href="/FitlyApp/Sobre-o-projeto/">
                             Nosso projeto
                         </a>
                     </li>
                     <li>
-                        <a href="artigoPrincipal.html">Artigos</a>
+                        <a href="/FitlyApp/Artigos/">Artigos</a>
                     </li>
                 </ul>
             </div>
