--- a/Artigos/MicroHabitos.html
+++ b/Artigos/MicroHabitos.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Micro-hábitos transformadores</title>
     <link rel="stylesheet" href="CSS/micro-habitos.css" />
+    <script src="https://kit.fontawesome.com/a1f8cb2104.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
