--- a/Artigos/OrganizaçãoAlimentar.html
+++ b/Artigos/OrganizaçãoAlimentar.html
@@ -7,7 +7,7 @@
         Organização alimentar 
     </title>
     <link rel="stylesheet" href="CSS/organização_alimentar.css">
-
+    <script src="https://kit.fontawesome.com/a1f8cb2104.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
