--- a/Artigos/index.html
+++ b/Artigos/index.html
@@ -9,6 +9,7 @@
       href="/beneficios-alimentacao-equilibrada/css/reset.css"
     />
     <link rel="stylesheet" href="CSS/artigoPrincipal.css" />
+    <script src="https://kit.fontawesome.com/a1f8cb2104.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
