--- a/Sobre-o-projeto/index.html
+++ b/Sobre-o-projeto/index.html
@@ -5,6 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Sobre o Projeto</title>
       <link rel="stylesheet" href="css/sobreProjeto.css" />
+      <script src="https://kit.fontawesome.com/a1f8cb2104.js" crossorigin="anonymous"></script>
     </head>
     <body>
     <header>
