adicionei o Organizacao alimentar

--- a/Artigos/index.html
+++ b/Artigos/index.html
@@ -96,6 +96,25 @@
               </div>
             </div>
           </li>
+          <li>
+            <h2>Organização alimentar</h2>
+            <div class="tudo">
+              <a href="OrganizaçãoAlimentar.html"
+                ><img
+                  src="img artigoPrincipal/landscape-placeholder 1.png"
+                  alt="img"
+              /></a>
+              <div class="texto">
+                <p>
+                  Pequenas ações e hábitos de atividades físicas, que possuem um
+                  grande impacto quando somados e feitos com constância.
+                </p>
+                <a href="micro-habitos.html">
+                  <p class="button">Acesse o Artigo</p>
+                </a>
+              </div>
+            </div>
+          </li>
         </ul>
       </section>
     </main>
