--- a/Artigos/index.html
+++ b/Artigos/index.html
@@ -44,13 +44,12 @@
             <div class="tudo">
               <a href="/FitlyApp/Artigos/AlimentacaoEquilibrada.html"
                 ><img
-                  src="img artigoPrincipal/landscape-placeholder 1.png"
+                  src="img beneficios-maleficios/img alimentação-equilibreda/fresh-fruits-2305192_1280 1.png"
                   alt="img"
               /></a>
               <div class="texto">
                 <p>
-                  Adotar uma alimentação equilibrada é essencial para a promoção
-                  da saúde ao longo da vida.
+                  Adotar uma alimentação equilibrada é essencial para a promoção da saúde ao longo da vida, uma alimentação equilibrada tambem ajuda numa serie de outras coisas.
                 </p>
                 <a href="/FitlyApp/Artigos/AlimentacaoEquilibrada.html">
                   <p class="button">Acesse o Artigo</p>
@@ -63,7 +62,7 @@
             <div class="tudo">
               <a href="/FitlyApp/Artigos/BeneficiosAlimentacaoEquilibrada.html"
                 ><img
-                  src="img artigoPrincipal/landscape-placeholder 1.png"
+                  src="img beneficios-alimentação-equilibrada/prato-02.png"
                   alt="img"
               /></a>
               <div class="texto">
@@ -82,7 +81,7 @@
             <div class="tudo">
               <a href="micro-habitos.html"
                 ><img
-                  src="img artigoPrincipal/landscape-placeholder 1.png"
+                  src="/Imagens/img Artigos/homen-02.png"
                   alt="img"
               /></a>
               <div class="texto">
@@ -101,13 +100,12 @@
             <div class="tudo">
               <a href="OrganizaçãoAlimentar.html"
                 ><img
-                  src="img artigoPrincipal/landscape-placeholder 1.png"
+                  src="/Imagens/img Artigos/ferks-02.png"
                   alt="img"
               /></a>
               <div class="texto">
                 <p>
-                  Pequenas ações e hábitos de atividades físicas, que possuem um
-                  grande impacto quando somados e feitos com constância.
+                  Organizar a alimentação é essencial para evitar improvisos que acabam levando a escolhas ruins. Tente tirar 30, 40 minutos para planejar a semana.
                 </p>
                 <a href="micro-habitos.html">
                   <p class="button">Acesse o Artigo</p>
