--- a/Artigos/index.html
+++ b/Artigos/index.html
@@ -81,7 +81,7 @@
             <div class="tudo">
               <a href="micro-habitos.html"
                 ><img
-                  src="/Imagens/img Artigos/homen-02.png"
+                  src="img artigoPrincipal/homen-02.png"
                   alt="img"
               /></a>
               <div class="texto">
@@ -100,7 +100,7 @@
             <div class="tudo">
               <a href="OrganizaçãoAlimentar.html"
                 ><img
-                  src="/Imagens/img Artigos/ferks-02.png"
+                  src="img artigoPrincipal/ferks-02.png"
                   alt="img"
               /></a>
               <div class="texto">
