--- a/Artigos/alimentacaoEquilibrada.html
+++ b/Artigos/alimentacaoEquilibrada.html
@@ -171,10 +171,10 @@
                 </p>
                 <ul>
                     <li>
-                        <a href=""><i class="fa-brands fa-instagram"><i><a>
+                        <a href=""><span class="fa-brands fa-instagram"><span><a>
                     </li>
                     <li>
-                        <a href=""><i class="fa-brands fa-tiktok"></i></a>
+                        <a href=""><span class="fa-brands fa-tiktok"></span></a>
                     </li>
                 </ul>
             </div>
