--- a/Artigos/index.html
+++ b/Artigos/index.html
@@ -79,7 +79,7 @@
           <li>
             <h2>Micro-hábitos</h2>
             <div class="tudo">
-              <a href="micro-habitos.html"
+              <a href="/FitlyApp/Artigos/MicroHabitos.html"
                 ><img
                   src="img artigoPrincipal/homen-02.png"
                   alt="img"
@@ -89,7 +89,7 @@
                   Pequenas ações e hábitos de atividades físicas, que possuem um
                   grande impacto quando somados e feitos com constância.
                 </p>
-                <a href="micro-habitos.html">
+                <a href="/FitlyApp/Artigos/MicroHabitos.html">
                   <p class="button">Acesse o Artigo</p>
                 </a>
               </div>
@@ -98,7 +98,7 @@
           <li>
             <h2>Organização alimentar</h2>
             <div class="tudo">
-              <a href="OrganizaçãoAlimentar.html"
+              <a href="/FitlyApp/Artigos/OrganizaçãoAlimentar.html"
                 ><img
                   src="img artigoPrincipal/ferks-02.png"
                   alt="img"
@@ -107,7 +107,7 @@
                 <p>
                   Organizar a alimentação é essencial para evitar improvisos que acabam levando a escolhas ruins. Tente tirar 30, 40 minutos para planejar a semana.
                 </p>
-                <a href="micro-habitos.html">
+                <a href="/FitlyApp/Artigos/OrganizaçãoAlimentar.html">
                   <p class="button">Acesse o Artigo</p>
                 </a>
               </div>
