Atualização das imagens, último pente fino antes da entrega, pequenas correções nas páginas do sobre projeto

--- a/Artigos/index.html
+++ b/Artigos/index.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <div class="logo">
-        <img src="/FitlyApp\Imagens\logos\logoFitlySemTexto.png" alt="Logo" />
+        <img src="..\Imagens\logos\logoFitlySemTexto.png" alt="Logo" />
         <a href="/FitlyApp">
           <h2>Fitly</h2>
         </a>
@@ -120,7 +120,7 @@
         <div>
             <div class="logo">
                 <a href="/FitlyApp/">
-                    <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
+                    <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
                     <h2>
                         Fitly
                     </h2>
