--- a/Artigos/MicroHabitos.html
+++ b/Artigos/MicroHabitos.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <div class="logo">
-        <img src="\FitlyApp\Imagens\logos\logoFitlySemTexto.png" alt="Logo">
+        <img src="..\Imagens\logos\logoFitlySemTexto.png" alt="Logo">
         <a href="/FitlyApp"><h2>Fitly</h2></a>
       </div>
       <nav>
@@ -127,7 +127,7 @@
         <div>
             <div class="logo">
                 <a href="/FitlyApp/">
-                    <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
+                    <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
                     <h2>
                         Fitly
                     </h2>
