--- a/Artigos/OrganizaçãoAlimentar.html
+++ b/Artigos/OrganizaçãoAlimentar.html
@@ -12,7 +12,7 @@
 <body>
     <header>
       <div class="logo">
-        <img src="\FitlyApp\Imagens\logos\logoFitlySemTexto.png" alt="Logo">
+        <img src="..\Imagens\logos\logoFitlySemTexto.png" alt="Logo">
         <a href="/FitlyApp"><h2>Fitly</h2></a>
       </div>
       <nav>
@@ -146,7 +146,7 @@
                 </p>
             </li>
             <li>
-                <a href="figma.com/exit?url=https%3A%2F%2Fwww.heart.org%2Fen%2Fhealthy-living%2Fhealthy-eating">American Heart Association - Health eating for a Healthy Heart </a>
+                <a href="https://www.heart.org/en/healthy-living/healthy-eating#:~:text=Over%20time%2C%20load%20up%20on,minimally%20processed%20foods%20whenever%20possible.">American Heart Association - Health eating for a Healthy Heart </a>
             </li>
         </ul>
     </section>
@@ -154,7 +154,7 @@
         <div>
             <div class="logo">
                 <a href="/FitlyApp/">
-                    <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
+                    <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
                     <h2>
                         Fitly
                     </h2>
