Atualização no design das páginas de artigos

--- a/Artigos/OrganizaçãoAlimentar.html
+++ b/Artigos/OrganizaçãoAlimentar.html
@@ -119,7 +119,7 @@
                 </p>
             </li>
         </ul>
-        <p>
+        <p class="dica-extra">
             <span>Dica Extra:</span> Cozinhe em maior quantidade e congele em porções para emergência.
         </p>
         </div>
