Implementação de dois vídeos nas pags de organização alimentar e de alimentação equilibrada

--- a/Artigos/OrganizaçãoAlimentar.html
+++ b/Artigos/OrganizaçãoAlimentar.html
@@ -1,213 +1,245 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        Organização alimentar 
+        Organização alimentar
     </title>
     <link rel="stylesheet" href="CSS/organização_alimentar.css">
     <script src="https://kit.fontawesome.com/a1f8cb2104.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <header>
-      <div class="logo">
-        <img src="..\Imagens\logos\logoFitlySemTexto.png" alt="Logo">
-        <a href="/FitlyApp"><h2>Fitly</h2></a>
-      </div>
-      <nav>
-        <ul>
-          <li>
-            <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
-          </li>
-          <li>
-            <a href="/FitlyApp/Sobre-o-projeto/">Sobre O Projeto</a>
-          </li>
-          <li>
-            <a href="/FitlyApp/">Início</a>
-          </li>
-        </ul>
-      </nav>
+        <div class="logo">
+            <img src="..\Imagens\logos\logoFitlySemTexto.png" alt="Logo">
+            <a href="/FitlyApp">
+                <h2>Fitly</h2>
+            </a>
+        </div>
+        <nav>
+            <ul>
+                <li>
+                    <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
+                </li>
+                <li>
+                    <a href="/FitlyApp/Sobre-o-projeto/">Sobre O Projeto</a>
+                </li>
+                <li>
+                    <a href="/FitlyApp/">Início</a>
+                </li>
+            </ul>
+        </nav>
     </header>
-  <main>
-    <section class="introducao">
-        <h2>
-            Como organizar sua rotina alimentar sem precisar de dietas radicais: 
-        </h2>
-        <p>
-            Muita gente acha que para ter uma alimentação saudável precisa cortar grupos alimentares, contar calorias de formar obssesiva ou seguir dietas super restritivas. Mas acredite: não é nada disso! Comer vem pode ser simples, leve e prazeroso. O segredo está na organização     e em pequenas mudanças no dia a dia. Vamos aprende como?
-        </p>
-    </section>
-    <section class="planejamento">
-        <h3>
-            Planejamento de refeições: o segredo para consistência diária
-        </h3>
-        <p>
-        Organizar a alimentação é essencial para evitar improvisos que acabam levando a escolhas ruins. Tente tirar 30, 40 minutos para planejar a semana: café da manhã, almoço, jantar e lanches, Isso evita estresse e facilita escolhars inteligentes.
-        </p>
-        <h4>
-            Dicas práticas: 
-        </h4>
-        <ul>
-            <li>
-             Monte um cardápio semanal e faça uma lista de compras completa.
-            </li>
-            <li>
-                Prepare porções de arroz integral e congele para usar aos poucos. 
-            </li>
-            <li>
-                Tenha proteínas prontas (frango grelhado, ovos cozidos, carne moída temperada).
-            </li>
-            <li>
-                Lave e corte legumes para ganhar tempo nos dias corridos.
-            </li>
-        </ul>
-    </section>
-    <section class="porção">
-        <h3>
-            Controle de porções sem sofrimento: 
-        </h3>
-        <p>
-            Não precisa pesar cada alimento.Use truques visuais: 
-        </p>
-        <ul>
-            <li>
-                <p>
-                <strong>Palma da mão:</strong> porção de proteínas. 
-                </p>
-            </li>
-            <li>
-                <p>
-                    <strong> Punho fechado: </strong> porção de carboidratos.
-                </p>
-            </li>
-            <li>
-                <p>
-                    <strong>Uma colher de sopa:</strong> gordura boa (óleo).
-                </p>
-            </li>
-        </ul>
-        <p>
-            Esse método reduz exageros e ajuda a manter energia e saciedade.
-        </p>
-    </section>
+    <main>
+        <section class="introducao">
+            <h2>
+                Como organizar sua rotina alimentar sem precisar de dietas radicais:
+            </h2>
+            <p>
+                Muita gente acha que para ter uma alimentação saudável precisa cortar grupos alimentares, contar
+                calorias de formar obssesiva ou seguir dietas super restritivas. Mas acredite: não é nada disso! Comer
+                vem pode ser simples, leve e prazeroso. O segredo está na organização e em pequenas mudanças no dia a
+                dia. Vamos aprende como?
+            </p>
+        </section>
+        <section class="planejamento">
+            <h3>
+                Planejamento de refeições: o segredo para consistência diária
+            </h3>
+            <p>
+                Organizar a alimentação é essencial para evitar improvisos que acabam levando a escolhas ruins.
+                Tente
+                tirar 30, 40 minutos para planejar a semana: café da manhã, almoço, jantar e lanches, Isso evita
+                estresse e facilita escolhars inteligentes.
+            </p>
 
-    <section class="adaptação">
-        <div>
-        <div>
-        <h3>
-            Como adaptar hábitos alimentares à sua rotina
-        </h3>
-        <p>
-            Tem horários malucos? Sem problemas! Pequenas mudanças já ajudam: 
-        </p>
-        <ul>
-            <li>
+        </section>
+
+        <div class="texto_e_video">
+            <div>
+            <section class="dicas">
+                <h4>
+                    Dicas práticas:
+                </h4>
+                <ul>
+                    <li>
+                        Monte um cardápio semanal e faça uma lista de compras completa.
+                    </li>
+                    <li>
+                        Prepare porções de arroz integral e congele para usar aos poucos.
+                    </li>
+                    <li>
+                        Tenha proteínas prontas (frango grelhado, ovos cozidos, carne moída temperada).
+                    </li>
+                    <li>
+                        Lave e corte legumes para ganhar tempo nos dias corridos.
+                    </li>
+                </ul>
+            </section>
+            <section class="porção">
+
+                <h3>
+                    Controle de porções sem sofrimento:
+                </h3>
                 <p>
-                    Carregue snacks saudáveis (castanhas, frutas secas, iogurte).
+                    Não precisa pesar cada alimento.Use truques visuais:
                 </p>
-            </li>
-        
-            <li>
+                <ul>
+                    <li>
+                        <p>
+                            <strong>Palma da mão:</strong> porção de proteínas.
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            <strong> Punho fechado: </strong> porção de carboidratos.
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            <strong>Uma colher de sopa:</strong> gordura boa (óleo).
+                        </p>
+                    </li>
+                </ul>
                 <p>
-                    Tenha refeições leves a noite (sopas, cremes, saladas proteicas).
-                </p>
-            </li>
-            <li>
+                    Esse método reduz exageros e ajuda a manter energia e saciedade.
+            </section>
+            </div>
+            <div class="video">
                 <p>
-                    Prefira marmitas para não depender do delivery. 
+                <iframe width="315" height="560" src="https://www.youtube.com/embed/utpdYPx_EJs?si=iCIFOay1W69xnqYk"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                </iframe>
                 </p>
-            </li>
-        </ul>
-        <p class="dica-extra">
-            <span>Dica Extra:</span> Cozinhe em maior quantidade e congele em porções para emergência.
-        </p>
+            </div>
         </div>
-        <div>
-            <img src="../Imagens/img Artigos/ferks-guare-kiZKA2rZ8Y0-unsplash 1.png" alt="Marmita_Completa">
-        </div>
-        </div>
-        <p>
-            Organizar sua alimentação não precisa ser um bicho de sete cabeças.  Com um pouco de planejamento e escolhas inteligentes, você constrói hábitos duradouros que trazem mais saúde e bem-estar. Comece hoje: escolha um dia para planejar sua semana e sinta a diferença.  
-        </p>
-    </section>
-    <section class="referencias">
-        <h3>
-            Referências: 
-        </h3>
-        <ul>
-            <li>
-                <a href="https://nutritionsource.hsph.harvard.edu/healthy-eating-plate/">
-                    Harvard T.H> Chan School of Public Health - Healthy Eating Plate</a>
-            </li>
-            <li>
-                <p>
-                    Ludwig. D (2016). Always Hungry?(Livro traduzido para Emagreça sem fome em português)
-                </p>
-            </li>
-            <li>
-                <a href="https://www.heart.org/en/healthy-living/healthy-eating#:~:text=Over%20time%2C%20load%20up%20on,minimally%20processed%20foods%20whenever%20possible.">American Heart Association - Health eating for a Healthy Heart </a>
-            </li>
-        </ul>
-    </section>
-    <footer>
-        <div>
-            <div class="logo">
-                <a href="/FitlyApp/">
-                    <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
+        <section class="adaptação">
+            <div>
+                <div>
+                    <h3>
+                        Como adaptar hábitos alimentares à sua rotina
+                    </h3>
+                    <p>
+                        Tem horários malucos? Sem problemas! Pequenas mudanças já ajudam:
+                    </p>
+                    <ul>
+                        <li>
+                            <p>
+                                Carregue snacks saudáveis (castanhas, frutas secas, iogurte).
+                            </p>
+                        </li>
+
+                        <li>
+                            <p>
+                                Tenha refeições leves a noite (sopas, cremes, saladas proteicas).
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                Prefira marmitas para não depender do delivery.
+                            </p>
+                        </li>
+                    </ul>
+                    <p class="dica-extra">
+                        <span>Dica Extra:</span> Cozinhe em maior quantidade e congele em porções para emergência.
+                    </p>
+                </div>
+                <div>
+                    <img src="../Imagens/img Artigos/ferks-guare-kiZKA2rZ8Y0-unsplash 1.png" alt="Marmita_Completa">
+                </div>
+            </div>
+            <p>
+                Organizar sua alimentação não precisa ser um bicho de sete cabeças. Com um pouco de planejamento e
+                escolhas inteligentes, você constrói hábitos duradouros que trazem mais saúde e bem-estar. Comece hoje:
+                escolha um dia para planejar sua semana e sinta a diferença.
+            </p>
+        </section>
+        <section class="referencias">
+            <h3>
+                Referências:
+            </h3>
+            <ul>
+                <li>
+                    <a href="https://nutritionsource.hsph.harvard.edu/healthy-eating-plate/">
+                        Harvard T.H> Chan School of Public Health - Healthy Eating Plate</a>
+                </li>
+                <li>
+                    <p>
+                        Ludwig. D (2016). Always Hungry?(Livro traduzido para Emagreça sem fome em português)
+                    </p>
+                </li>
+                <li>
+                    <a
+                        href="https://www.heart.org/en/healthy-living/healthy-eating#:~:text=Over%20time%2C%20load%20up%20on,minimally%20processed%20foods%20whenever%20possible.">American
+                        Heart Association - Health eating for a Healthy Heart </a>
+                </li>
+            </ul>
+        </section>
+        <footer>
+            <div>
+                <div class="logo">
+                    <a href="/FitlyApp/">
+                        <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
+                        <h2>
+                            Fitly
+                        </h2>
+                    </a>
+                    <p>
+                        Sua jornada para uma vida mais tranquila <br> começa aqui.<br> Encontre treinos, dicas e muito
+                        mais!
+                    </p>
+                    <ul>
+                        <li>
+                            <a href=""><span class="fa-brands fa-instagram"><span><a>
+                        </li>
+                        <li>
+                            <a href=""><span class="fa-brands fa-tiktok"></span></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="mapSite">
                     <h2>
-                        Fitly
+                        Indice
                     </h2>
-                </a>
-                <p>
-                    Sua jornada para uma vida mais tranquila <br> começa aqui.<br> Encontre treinos, dicas e muito mais!
-                </p>
-                <ul>
-                    <li>
-                        <a href=""><span class="fa-brands fa-instagram"><span><a>
-                    </li>
-                    <li>
-                        <a href=""><span class="fa-brands fa-tiktok"></span></a>
-                    </li>
-                </ul>
+                    <ul>
+                        <li>
+                            <a href="/FitlyApp/">Início</a>
+                        </li>
+                        <li>
+                            <a href="/FitlyApp/Sobre-o-projeto/">
+                                Nosso projeto
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/FitlyApp/Artigos/">Artigos</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="contact">
+                    <h2> Contato</h2>
+                    <p>
+                        Tem alguma dúvida? Nos contate!
+                    </p>
+                    <p class="email">
+                        Fitlyapp1@gmail.com
+                    </p>
+                    <p>
+                        Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto Federal Catarinense
+                    </p>
+                </div>
             </div>
-            <div class="mapSite">
-                <h2>
-                    Indice
-                </h2>
-                <ul>
-                    <li>
-                        <a href="/FitlyApp/">Início</a>
-                    </li>
-                    <li>
-                        <a href="/FitlyApp/Sobre-o-projeto/">
-                            Nosso projeto
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/FitlyApp/Artigos/">Artigos</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="contact">
-                <h2> Contato</h2>
+            <div class="direitos">
                 <p>
-                    Tem alguma dúvida? Nos contate!
-                </p>
-                <p class="email">
-                    Fitlyapp1@gmail.com
-                </p>
-                <p>
-                    Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto Federal Catarinense
+                    &copy; 2025 Fitly. Todos os direitos reservados.
                 </p>
             </div>
-        </div>
-        <div class="direitos">
-        <p>
-            &copy; 2025 Fitly. Todos os direitos reservados.
-        </p>
-        </div>
-    </footer>
-  </main>
+        </footer>
+    </main>
 </body>
+
 </html>
