--- a/Artigos/alimentacaoEquilibrada.html
+++ b/Artigos/alimentacaoEquilibrada.html
@@ -155,8 +155,14 @@
           </li>
         </div>
       </ul>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/zwR28FGl3Zs?si=A-8qRunKgxDlNQjx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </section>
+      <div class="video">
+        <h3>
+          Saiba mais sobre o assunto de forma mais detalhada no vídeo abaixo: 
+        </h3>
+        <p>  <iframe width="560" height="315" src="https://www.youtube.com/embed/zwR28FGl3Zs?si=A-8qRunKgxDlNQjx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          </p>
+        </div>
+        </section>
   </main>
     <footer>
         <div>
