Correção das imagens dos integrantes.

--- a/Sobre-o-projeto/index.html
+++ b/Sobre-o-projeto/index.html
@@ -40,39 +40,24 @@
         </div>
       </div>
     </section>
-    <section class="sobre">
-      <p>
-        O Fitly é uma plataforma inovadora dedicada à organização da
-        alimentação diária, com foco em proporcionar uma experiência
-        personalizada e eficaz para atingir os objetivos de saúde e bem-estar
-        dos usuários.
-      </p>
-      <p>
-        Ao iniciar o uso do Fitly, o usuário será guiado por um processo
-        simples, onde será possível informar dados essenciais, como peso,
-        altura, sexo, idade, nível de atividade física e o objetivo específico
-        (ganho de massa muscular, perda de gordura ou ambos
-        simultaneamente).Nosso objetivo principal é fornecer metas realistas e
-        atingíveis de acordo com os objetivos do usuário, como metas de curto
-        e longo prazo (2 semanas, 1 mês, 2 meses, etc.), garantindo que a
-        jornada alimentar seja contínua e com resultados progressivos.
-      </p>
-      <p>
-        O impacto esperado do Fitly é ajudar uma comunidade crescente de pelo
-        menos 1000 pessoas a alcançarem seus objetivos de saúde de maneira
-        sustentável.
-      </p>
-      <h2>Colaboradores do projeto</h2>
-    </section>
     <section class="colaboradores">
+      <h2>Colaboradores do projeto</h2>
       <div class="colab">
+        <ul class="unit">
+          <li>
+            <strong>Bruna Ignácio Bernardes:</strong> Responsável pela parte biológica como 
+            <p>
+              <img src="/Imagens/Img integrantes/Bruna Ignácio Bernardes.jpg" alt="Bruna" class="imagem">
+            </p>
+            </li>
+        </ul>
         <ul class="dupla">
           <li>
             <strong>Igor Marcon Michels:</strong> Líder do projeto,
             responsável pela entrega das partes de cada um e coordenador das
             funções de cada um;
             <p>
-              <img class="imagem" src="../Imagens/Img integrantes/igor.jpg" alt="Igor Michels" />
+              <img class="imagem" src="../Imagens/Img integrantes/Igor.jpg" alt="Igor Michels" />
             </p>
           </li>
           <li>
@@ -80,7 +65,7 @@
             pesquisa e auxiliar no desenvolvimento das partes estáticas do
             site.
             <p>
-              <img class="imagem" src="../Imagens/Img integrantes/Pedroj.jpg" alt="Pedro josé" />
+              <img class="imagem" src="../Imagens/Img integrantes/Pedro.jpg" alt="Pedro josé" />
             </p>
           </li>
         </ul>
@@ -98,7 +83,7 @@
             <strong>Victor Murilo Bernardes:</strong> Secretário do projeto,
             responsável pela descrição e desenvolvimento das atas de reunião;
             <p>
-              <img class="imagem" src="../Imagens/Img integrantes/Victor_Murilo.jpeg" alt="Victor Murilo" />
+              <img class="imagem" src="../Imagens/Img integrantes/Victor Murilo.jpg" alt="Victor Murilo" />
             </p>
           </li>
         </ul>
