correção de um link bugado

--- a/Artigos/MicroHabitos.html
+++ b/Artigos/MicroHabitos.html
@@ -115,7 +115,7 @@
         </h3>
         <ul>
             <li>
-                <a href="https://www.bing.com/search?pglt=43&q=American+College+of+Sports+Medicine+-+Physical+Activity+Guidelines&cvid=4558073cf93f47718fd13bc5c701e8c7&gs_lcrp=EgRlZGdlKgYIABBFGDkyBggAEEUYOdIBBzg4NWowajGoAgCwAgA&FORM=ANNTA1&PC=U531">American College of Sports Medicine - Physical Activity Guidelines</a>
+                <a href="https://acsm.org/education-resources/trending-topics-resources/physical-activity-guidelines/">American College of Sports Medicine - Physical Activity Guidelines</a>
             </li>
             <li>
                 <a href="https://www.mayoclinic.org/healthy-lifestyle/fitness/in-depth/exercise/art-20048389">Mayo Clinic - Exercise 7 benefits of regular physical activity</a>
