Correção da página de referências

--- a/Sobre-o-projeto/index.html
+++ b/Sobre-o-projeto/index.html
@@ -45,7 +45,7 @@
       <div class="colab">
         <ul class="unit">
           <li>
-            <strong>Bruna Ignácio Bernardes:</strong> Responsável pela parte biológica como 
+            <strong>Bruna Ignácio Bernardes:</strong> Responsável pela parte biológica; 
             <p>
               <img src="/Imagens/Img integrantes/Bruna Ignácio Bernardes.jpg" alt="Bruna" class="imagem">
             </p>
