Organização da página de referências

--- a/Sobre-o-projeto/index.html
+++ b/Sobre-o-projeto/index.html
@@ -97,8 +97,7 @@
           </li>
           <li>
             <strong>Matheus Lacerda Maximiano:</strong> Criador da
-            organização, responsável por parte da pesquisa, a parte
-            especificada está descrita no Documento;
+            organização, responsável por parte da pesquisa;
             <p>
               <img class="imagem" src="../Imagens/Img integrantes/Matheus.jpg" alt="Matheus Maximiano Lacerda" />
             </p>
