--- a/Referencias/Referencias.html
+++ b/Referencias/Referencias.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Referencias</title>
     <link rel="stylesheet" href="css/reset.css"/>
-    <link rel="stylesheet" href="css/Referencias.css"/>
+    <link rel="stylesheet" href="css/Referencias.css?"/>
     <script src="https://kit.fontawesome.com/a1f8cb2104.js" crossorigin="anonymous"></script>
   </head>
 
