--- a/Sobre-o-projeto/index.html
+++ b/Sobre-o-projeto/index.html
@@ -2,11 +2,10 @@
 <html lang="pt-br">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sobre o Projeto</title>
-  <link rel="stylesheet" href="css/sobreProjeto.css" />
-  <script src="https://kit.fontawesome.com/a1f8cb2104.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="css/sobreProjeto.css">
 </head>
 
 <body>
@@ -40,130 +39,245 @@
         </div>
       </div>
     </section>
-    <section class="colaboradores">
-      <h2>Colaboradores do projeto</h2>
-      <div class="colab">
-        <ul class="unit">
-          <li>
-            <strong>Bruna Ignácio Bernardes:</strong> Responsável pela parte biológica; 
-            <p>
-              <img src="/Imagens/Img integrantes/Bruna Ignácio Bernardes.jpg" alt="Bruna" class="imagem">
-            </p>
-            </li>
-        </ul>
-        <ul class="dupla">
-          <li>
-            <strong>Igor Marcon Michels:</strong> Líder do projeto,
-            responsável pela entrega das partes de cada um e coordenador das
-            funções de cada um;
-            <p>
-              <img class="imagem" src="../Imagens/Img integrantes/Igor.jpg" alt="Igor Michels" />
-            </p>
-          </li>
-          <li>
-            <strong>Pedro José Oliveira da Roza:</strong> Responsável pela
-            pesquisa e auxiliar no desenvolvimento das partes estáticas do
-            site.
-            <p>
-              <img class="imagem" src="../Imagens/Img integrantes/Pedro.jpg" alt="Pedro josé" />
-            </p>
-          </li>
-        </ul>
-        <ul class="dupla">
-          <li>
-            <strong>Victor Feliciano:</strong> Responsável pelo
-            desenvolvimento da base de dados e as funcionalidades do app e o
-            site, como login e senha, cálculos com os dados informados pelo
-            usuário;
-            <p>
-              <img class="imagem" src="../Imagens/Img integrantes/Feliciano.jpg" alt="Victor Murilo" />
-            </p>
-          </li>
-          <li>
-            <strong>Victor Murilo Bernardes:</strong> Secretário do projeto,
-            responsável pela descrição e desenvolvimento das atas de reunião;
-            <p>
-              <img class="imagem" src="../Imagens/Img integrantes/Victor Murilo.jpg" alt="Victor Murilo" />
-            </p>
-          </li>
-        </ul>
-        <ul class="dupla">
-          <li>
-            <strong>Kaue Teixeira:</strong> Responsável por programar as
-            partes estáticas do site, além de auxiliar na pesquisa;
-            <p>
-              <img class="imagem" src="../Imagens/Img integrantes/Kaue.jpg" alt="Kaue Teixeira" />
-            </p>
-          </li>
-          <li>
-            <strong>Matheus Lacerda Maximiano:</strong> Criador da
-            organização, responsável por parte da pesquisa;
-            <p>
-              <img class="imagem" src="../Imagens/Img integrantes/Matheus.jpg" alt="Matheus Maximiano Lacerda" />
-            </p>
-          </li>
-        </ul>
-      </div>
-    </section>
-  </main>
-</body>
-<footer>
-  <div>
-    <div class="logo">
-      <a href="/FitlyApp/">
-        <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
-        <h2>
-          Fitly
-        </h2>
-      </a>
-      <p>
-        Sua jornada para uma vida mais tranquila <br> começa aqui.<br> Encontre treinos, dicas e muito mais!
-      </p>
-      <ul>
-        <li>
-          <a href=""><span class="fa-brands fa-instagram"><span><a>
-        </li>
-        <li>
-          <a href=""><span class="fa-brands fa-tiktok"></span></a>
-        </li>
-      </ul>
-    </div>
-    <div class="mapSite">
-      <h2>
-        Indice
-      </h2>
-      <ul>
-        <li>
-          <a href="/FitlyApp/">Início</a>
-        </li>
-        <li>
-          <a href="/FitlyApp/Sobre-o-projeto/">
-            Nosso projeto
-          </a>
-        </li>
-        <li>
-          <a href="/FitlyApp/Artigos/">Artigos</a>
-        </li>
-      </ul>
-    </div>
-    <div class="contact">
-      <h2> Contato</h2>
-      <p>
-        Tem alguma dúvida? Nos contate!
-      </p>
-      <p class="email">
-        Fitlyapp1@gmail.com
-      </p>
-      <p>
-        Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto Federal Catarinense
-      </p>
-    </div>
-  </div>
-  <div class="direitos">
-    <p>
-      &copy; 2025 Fitly. Todos os direitos reservados.
-    </p>
-  </div>
-</footer>
+    <h2>Atas de reuniões🕚:</h2>
+    <section class="all-sec">
+      <nav>
+        <ul>
+          <div class="esquerda">
+            <li>
+              <strong>11 de julho de 2025, 09:45 até às 11:15</strong>
+              <p class="part">Participantes: Pedro José Oliveira da Roza, Victor Murilo Bernardes, Matheus Maximiano, Victor Feliciano, Igor
+                Marcon Michels e Kaue Teixeira
+                Anotações 📓:</p>
+                <nav>
+                  <ul>
+                    <li>Escolhemos o líder: Igor Marcon Michels; </li>
+                    <li>Discutimos temas relacionados à alimentação equilibrada;</li>
+                    <li>Iniciamos e concluímos a pesquisa relacionada ao exercício físico.</li>
+                  </ul>
+                  <p>
+                    <ol>
+                      <li class="ações">Ações necessárias ✔️:</li>
+                      <ul>
+                        <li>Definir o líder</li>
+                        <li>Discussão do conteúdo</li>
+                        <li>Término da pesquisa</li>
+                      </ul>
+                    </ol>
+                  </p>
+                </nav>
+              </li>
+            </div>
 
-</html>
+
+            
+            <div class="direita">
+              <li>
+                <strong>18 de julho de 2025, 09:45 até às 11:15</strong>
+                <p class="part">Participantes: Pedro José Oliveira da Roza, Victor Murilo Bernardes, Matheus Maximiano, Victor Feliciano, Igor
+                  Marcon Michels e Kaue Teixeira
+                  Anotações 📓:</p>
+                  <nav>
+                    <ul>
+                      <li>Definição do nome fictício: Fitly</li>
+                      <li>Criação do instagram do trabalho: app.fitly</li>
+                      <li>Pedro José fez a aprimoração do design do site de alimentação equilibrada</li>
+                      <li>Victor Feliciano continuou a produção da página de login e cadastro do projeto</li>
+                      <li>Criação do github compartilhado entre os integrantes do grupo.</li>
+                      <li>Victor Murilo fez as anotações e criou a ata, com evento no google agenda</li>
+                      <li>Matheus e Kaue trabalharam no github compartilhado</li>
+                      <li>Victor Murilo planejou as ações necessárias junto ao líder</li>
+                      <li> Criação do Email: Fitlyapp1@gmail.com</li>
+          <li>Definição do secretário: Victor Murilo</li>
+        </ul>
+        <p>
+          <ol>
+            <li class="ações">Ações necessárias ✔️:</li>
+            <ul>
+              <li>Tela de login e cadastro</li>
+              <li>Produção do README do github compartilhado</li>
+              <li> Início da programação do site</li>
+              <li> Criação das redes Sociais do projeto</li>
+            <li>Esboço do design do site no figma</li>
+            <li>Ata Completa</li>
+            <li>Criação da organização no github</li>
+          </ul>
+        </ol>
+        </p>
+      </nav>
+    </li>
+    <li>
+    </div>
+
+
+
+    <div class="esquerda">
+      <li>
+        <strong>8 de Agosto de 2025, 8:00 até às 9:30 | 8 de agosto de 2025 09:45 até às 11:15</strong>
+        <p class="part">Participantes: Pedro José Oliveira da Roza, Victor Murilo Bernardes, Matheus Maximiano, Victor Feliciano, Igor Marcon Michels e Kaue Teixeira Anotações 📓:</p>
+        <nav>  
+          <ul>
+            <li>Como os computadores da sala B3 foram resetados, acabamos perdendo o email do app, incluindo a conta do instagram. Por isso, criamos um novo email e uma nova conta nas redes sociais.</li>
+            <li>Definição das cores: Preto e branco (juntamente aos seus diferentes tons). Em páginas de fundo claro, letras pretas mais finas. Em páginas de fundo escuro, letras em branco mais grossas para dar um destaque. Os títulos serão em azul.</li>
+            <li>Criação da logo, utilizando como base as cores já definidas do site</li>
+            <li>Correção do design no figma</li>
+            <li>Início da integração da tela de login/cadastro em banco de dados</li>
+            <li>Adição e pesquisa de imagens</li>
+            <li>Programação inicial do index no github</li>
+            <li>Adição de conteúdo no figma (malefícios e benefícios, imagens, páginas, etc.)</li>
+            <li>Produção do roteiro de perguntas</li>
+            <li>Produção do rodapé do app no Figma</li>
+            <li>Produção da página de configurações (no figma)</li>
+            <li>Pesquisa de alimentos</li>
+            <li>Configuração da conta do instagram</li>
+          </ul>
+          <p>
+            <ol>
+            <li class="ações">Ações necessárias ✔️:</li>
+          </ol>
+          <ul>
+            <li>Definir as cores do app</li>
+            <li>Criação do logo do app</li>
+            <li>Adição das atas</li>
+            <li>Término do rodapé</li>
+            <li>Término do roteiro de perguntas</li>
+            <li>Início da página sobre o projeto</li>
+          </ul>
+        </p>
+      </nav>
+    </li>
+  </div>
+
+
+
+  <div class="direita">
+    <li>
+      <strong>20 de Agosto de 2025, 13:00 até às 13:45</strong> <p class="part">Participantes: Igor Maicon Michels e Victor Murilo Bernardes
+        Anotações 📓:</p>
+      <nav>  
+        <ul>
+          <li>Programação da estrutura de algumas páginas;</li>
+          <li>Estilo da página inicial</li>
+          <li>Produção do início do conteúdo da página inicial;</li>
+          <li>Início da produção dos artigos (conteúdo e programação);</li>
+          <li>Discussão de ideias;</li>
+          <li>Correções de erros;</li>
+        </ul>
+      </nav>
+      <strong></strong> <p>Participantes: Igor Maicon Michels, Victor Murilo Bernardes, Kaue Teixeira e Matheus Maximiniano Lacerda</p>
+<nav>  
+  <ol>
+    <li class="ações">Ações necessárias ✔️:</li>
+    <ul>
+      <li>Finalização das páginas inicial</li>
+      <li>Finalização do Header</li>
+          <li>Iniciar o footer</li>
+          <li>Organizar o projeto no vscode</li>
+          <li>Indexação das páginas</li>
+          <li>Início da página sobre o projeto</li>
+          <li>Finalização da página de um dos artigos</li>
+          <li>Início da página inicial do artigo</li>
+          <li>Criação do menu recolhivel para o header Adiada para a segunda parte do trabalho</li>
+        </ul>
+      </ol>
+      </nav>
+      <nav>  
+      </li>
+    </div>
+
+
+
+    <div class="esquerda">
+      <li>
+            <strong>29 de agosto de 2025, 9:45 até às 11:15</strong> <p class="part ">Participantes: Igor Maicon Michels, Victor Murilo Bernardes, Kaue Teixeira, Matheus Maximiniano Lacerda, Victor Feliciano e Pedro José
+              Anotações 📓:</p>
+              <ul>
+                <li>Conversamos com o professor sobre a nova colaboradora: Bruna (Nutricionista, irmã do colega Victor)</li>
+              </ul>
+              <p>
+                <ol>
+                  <li class="ações">Ações necessárias ✔️:</li>
+                </ol>
+                <ul>
+                  <li>Criação do roteiro de perguntas</li>
+                  <li>Finalização de duas páginas de artigo</li>
+                  <li>Finalização da página sobre o projeto</li>
+                  <li>Início do BackEnd</li>
+                  <li>Primeiros posts do Instagram</li>
+                </ul>
+        </p>
+      </nav>
+    </li>
+  </div>
+
+
+
+  <div class="direita">
+    <li>
+      <strong>5 de Setembro de 2025, 09:45 até 11:15</strong>
+      <p class="part">
+      Participantes: Igor Maicon Michels, Victor Murilo Bernardes, Kaue Teixeira,
+      Matheus Maximiniano Lacerda, Victor Feliciano e Pedro José <br>
+      Anotações 📓:
+      </p>
+      <ul>
+        <li>Iniciamos o roteiro de perguntas</li>
+        <li>Finalizamos o footer</li>
+        <li>Criação de mais uma página do artigo</li>
+      </ul>
+      <p><strong>Ações necessárias ✔️:</strong></p>
+      <ul>
+        <li>Achar imagens que condizem com o conteúdo</li>
+        <li>Finalizar todas as outras atividades até o momento</li>
+      </ul>
+    </li>
+  </div>
+
+
+
+<div class="esquerda">
+  <li>
+    <strong>12 de Setembro de 2025, 09:45 até 11:15</strong>
+    <p class="part">
+      Participantes: Igor Maicon Michels, Victor Murilo Bernardes, Kaue Teixeira,
+      Matheus Maximiniano Lacerda, Victor Feliciano e Pedro José <br>
+      Anotações 📓:
+    </p>
+    <ul>
+      <li>Colocamos o site no ar fitly.com.br</li>
+      <li>Iniciamos o roteiro de perguntas no HTML e CSS</li>
+    </ul>
+    <ol>
+      <li class="ações">Ações necessárias ✔️:</li>
+    </ol>
+    <ul>
+      <li>Tirar foto da equipe separadamente</li>
+      <li>Conseguir uma foto da colaboradora</li>
+      <li>Anotar correções que podem ser feitas no design do site</li>
+    </ul>
+  </li>
+</div>
+
+
+
+<div class="direita">
+  <li>
+    <strong>13 de Setembro de 2025, 08:00 até 11:15</strong>
+    <p class="part">
+      Participantes: Igor Maicon Michels, Victor Murilo Bernardes,
+      Kaue Teixeira, Matheus Maximiniano Lacerda e Pedro José <br>
+      Anotações 📓:
+    </p>
+    <ul>
+      <li>Continuar o roteiro de perguntas</li>
+      <li>Fazer as correções de design anotadas</li>
+      <li>Tirar a foto da equipe</li>
+      <li>Criação da página de referências no Figma e HTML</li>
+      <li>Conversar sobre a reunião do Kennedy</li>
+    </ul>
+  </li>
+</div>
+    </section>
+    </main>
+  </body>
+  </html>
