--- a/Sobre-o-projeto/index.html
+++ b/Sobre-o-projeto/index.html
@@ -58,7 +58,7 @@
             responsável pela entrega das partes de cada um e coordenador das
             funções de cada um;
             <p>
-              <img class="imagem" src="../Imagens/Img integrantes/Igor.jpg" alt="Igor Michels" />
+              <img class="imagem" src="../Imagens/Img integrantes/AIgor.jpg" alt="Igor Michels" />
             </p>
           </li>
           <li>
@@ -66,7 +66,7 @@
             pesquisa e auxiliar no desenvolvimento das partes estáticas do
             site.
             <p>
-              <img class="imagem" src="../Imagens/Img integrantes/Pedro.jpg" alt="Pedro josé" />
+              <img class="imagem" src="../Imagens/Img integrantes/APedro.jpg" alt="Pedro josé" />
             </p>
           </li>
         </ul>
@@ -77,14 +77,14 @@
             site, como login e senha, cálculos com os dados informados pelo
             usuário;
             <p>
-              <img class="imagem" src="../Imagens/Img integrantes/Feliciano.jpg" alt="Victor Murilo" />
+              <img class="imagem" src="../Imagens/Img integrantes/AFeliciano.jpg" alt="Victor Murilo" />
             </p>
           </li>
           <li>
             <strong>Victor Murilo Bernardes:</strong> Secretário do projeto,
             responsável pela descrição e desenvolvimento das atas de reunião;
             <p>
-              <img class="imagem" src="../Imagens/Img integrantes/Victor Murilo.jpg" alt="Victor Murilo" />
+              <img class="imagem" src="../Imagens/Img integrantes/AVictor Murilo.jpg" alt="Victor Murilo" />
             </p>
           </li>
         </ul>
@@ -93,14 +93,14 @@
             <strong>Kaue Teixeira:</strong> Responsável por programar as
             partes estáticas do site, além de auxiliar na pesquisa;
             <p>
-              <img class="imagem" src="../Imagens/Img integrantes/Kaue.jpg" alt="Kaue Teixeira" />
+              <img class="imagem" src="../Imagens/Img integrantes/AKaue.jpg" alt="Kaue Teixeira" />
             </p>
           </li>
           <li>
             <strong>Matheus Lacerda Maximiano:</strong> Criador da
             organização, responsável por parte da pesquisa;
             <p>
-              <img class="imagem" src="../Imagens/Img integrantes/Matheus.jpg" alt="Matheus Maximiano Lacerda" />
+              <img class="imagem" src="../Imagens/Img integrantes/AMatheus.jpg" alt="Matheus Maximiano Lacerda" />
             </p>
           </li>
         </ul>
